--- a/vistas/privado/marcas.html
+++ b/vistas/privado/marcas.html
@@ -30,7 +30,7 @@
     <main id="mainContent">
         <div class="ContenedorT">
             <div class="ContenedorTitulo position-relative">
-                <h3 class="titillium-web-semibold textP"> Marcas </h3>
+                <h3 class="titillium-web-semibold textP"> Marcas </h3>                                        
                 <div class="linea1"></div>
             </div>
 
@@ -89,7 +89,10 @@
                                             onchange="displaySelectedImage(event, 'selectedImage')" />
                                     </div>
                                 </div>
-
+                                <div class="contenedorBotones z-0 mt-3 mb-3">
+                                    <button type="button"
+                                        class="btn btn2 btn-primary shadow text18 titillium-web-regular">Guardar</button>
+                                </div>
                             </div>
                         </div>
                     </div>
